--- a/package.json
+++ b/package.json
@@ -16,11 +16,23 @@
     "url": "https://github.com/Efrem33/Landing-for-test/issues"
   },
   "homepage": "https://github.com/Efrem33/Landing-for-test#readme",
+  "browserslist": [
+    "> 1%"
+  ],
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
+    "core-js": "^3.29.1",
     "json-server": "^0.17.1",
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "jshint": "^2.13.6"
+    "@babel/polyfill": "^7.12.1",
+    "es6-polyfill": "^1.1.0",
+    "es6-promise": "^4.2.8",
+    "jshint": "^2.13.6",
+    "nodelist-foreach-polyfill": "^1.2.0"
   }
 }
